test/files/neg/t8237-default.check
t8237-default.scala:5: error: no type parameters for method test4: (x: T[T[List[T[X forSome { type X }]]]])Nothing exist so that it can be applied to arguments (List[Int])
 --- because ---
argument expression's type is not compatible with formal parameter type;
 found   : List[Int]
 required: ?T[?T[List[?T[X forSome { type X }]]]]
  test4(test4$default$1)
  ^
t8237-default.scala:5: error: type mismatch;
 found   : List[Int]
 required: T[T[List[T[X forSome { type X }]]]]
  test4(test4$default$1)
        ^
two errors found
